# MilkDAWp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  DEPENDENCY_ROADMAP.md  PROJECTM_DETAILS.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  pretest-artifacts.yml  release.yml
.junie/: guidelines.md
LICENSES/: JUCE-AGPL-3.0.txt  README.md  projectM-LGPL-2.1.txt
THIRD_PARTY_LICENSES/: Google_Material_Icons.txt
docs/: QA.md  audit-deps.md  submodules.md
resources/presets/: README.md
scripts/: bootstrap.bat  bootstrap.sh
scripts/ci/: check_runtime_win.ps1
scripts/cmake/: copy_runtime_deps.cmake
src/: AdaptiveQuality.h  AudioAnalysisQueue.h  Logging.h  MessageThreadBridge.h  PluginEditor.cpp  PluginProcessor.cpp  SharedAssetCache.h  ThreadSafeQueue.h  Version.h  VisualizationThread.h
src/processor/: PluginProcessor.cpp  PluginProcessor.h
src/renderers/: ProjectMRenderer.cpp  ProjectMRenderer.h
src/state/: Parameters.h
src/ui/: PluginEditor.cpp  PluginEditor.h  VisualizationWindow.cpp  VisualizationWindow.h
src/utils/: Logging.h
tests/: AudioAnalysisQueueTests.cpp  Main.cpp  MessageThreadTests.cpp  SampleTests.cpp  SharedAssetCacheTests.cpp  StateTests.cpp  VisualizationThreadTests.cpp
tools/installer/: make_sfx_installer.ps1  sfx-config.txt  winrar-sfx-comment.txt
triplets/: arm64-osx-dynamic.cmake  x64-linux-dynamic.cmake  x64-osx-dynamic.cmake  x64-windows-dynamic.cmake
